parser_new.output
Grammar

    0 $accept: program $end

    1 program: globals_var_decls func_list

    2 func_list: func_list func_def_item
    3          | func_def_item

    4 func_def_item: func_def

    5 globals_var_decls: globals_var_decls var_decl
    6                  | ε

    7 var_decl: type id_list SEMICOLON

    8 type: INTEGER
    9     | STRING
   10     | BOOL
   11     | FLOAT
   12     | CHAR
   13     | VOID

   14 id_list: NAME
   15        | id_list COMMA NAME

   16 $@1: ε

   17 $@2: ε

   18 func_def: type NAME LEFT_ROUND_BRACKET $@1 param_list_opt RIGHT_ROUND_BRACKET $@2 block

   19 param_list_opt: param_list
   20               | ε

   21 param_list: param
   22           | param_list COMMA param

   23 param: type NAME

   24 block: LEFT_CURLY_BRACKET decl_list_opt stmt_list RIGHT_CURLY_BRACKET

   25 decl_list_opt: decl_list_opt var_decl
   26              | ε

   27 stmt_list: stmt_list stmt
   28          | ε

   29 stmt: assign_stmt SEMICOLON
   30     | read_stmt SEMICOLON
   31     | write_stmt SEMICOLON
   32     | return_stmt SEMICOLON
   33     | func_call_stmt SEMICOLON
   34     | if_stmt
   35     | while_stmt
   36     | do_while_stmt
   37     | block

   38 if_stmt: IF LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET stmt
   39        | IF LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET stmt ELSE stmt

   40 while_stmt: WHILE LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET stmt

   41 do_while_stmt: DO stmt WHILE LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET SEMICOLON

   42 assign_stmt: NAME ASSIGN_OP expr

   43 read_stmt: READ NAME

   44 write_stmt: WRITE expr

   45 return_stmt: RETURN expr
   46            | RETURN

   47 func_call_stmt: NAME LEFT_ROUND_BRACKET args RIGHT_ROUND_BRACKET

   48 arg_list: expr
   49         | expr COMMA arg_list

   50 args: arg_list
   51     | ε

   52 expr: expr PLUS expr
   53     | expr MINUS expr
   54     | expr MULT expr
   55     | expr DIV expr
   56     | expr GREATER_THAN expr
   57     | expr LESS_THAN expr
   58     | expr GREATER_THAN_EQUAL expr
   59     | expr LESS_THAN_EQUAL expr
   60     | expr EQUAL expr
   61     | expr NOT_EQUAL expr
   62     | expr AND expr
   63     | expr OR expr
   64     | NOT expr
   65     | MINUS expr
   66     | expr QUESTION_MARK expr COLON expr
   67     | LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET
   68     | NAME LEFT_ROUND_BRACKET args RIGHT_ROUND_BRACKET
   69     | NAME
   70     | INT_NUM
   71     | FLOAT_NUM
   72     | STR_CONST


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER (258) 8
    STRING (259) 9
    VOID (260) 13
    READ (261) 43
    WRITE (262) 44
    BOOL (263) 10
    FLOAT (264) 11
    CHAR (265) 12
    IF (266) 38 39
    ELSE (267) 39
    WHILE (268) 40 41
    DO (269) 41
    RETURN (270) 45 46
    NAME <name> (271) 14 15 18 23 42 43 47 68 69
    INT_NUM <str> (272) 70
    FLOAT_NUM <str> (273) 71
    STR_CONST <str> (274) 72
    ASSIGN_OP (275) 42
    COMMA (276) 15 22 49
    SEMICOLON (277) 7 29 30 31 32 33 41
    LEFT_ROUND_BRACKET (278) 18 38 39 40 41 47 67 68
    RIGHT_ROUND_BRACKET (279) 18 38 39 40 41 47 67 68
    LEFT_CURLY_BRACKET (280) 24
    RIGHT_CURLY_BRACKET (281) 24
    PLUS (282) 52
    MINUS (283) 53 65
    MULT (284) 54
    DIV (285) 55
    GREATER_THAN (286) 56
    LESS_THAN (287) 57
    GREATER_THAN_EQUAL (288) 58
    LESS_THAN_EQUAL (289) 59
    EQUAL (290) 60
    NOT_EQUAL (291) 61
    AND (292) 62
    OR (293) 63
    QUESTION_MARK (294) 66
    COLON (295) 66
    NOT (296) 64
    UMINUS (297)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program (44)
        on left: 1
        on right: 0
    func_list (45)
        on left: 2 3
        on right: 1 2
    func_def_item (46)
        on left: 4
        on right: 2 3
    globals_var_decls (47)
        on left: 5 6
        on right: 1 5
    var_decl (48)
        on left: 7
        on right: 5 25
    type <type> (49)
        on left: 8 9 10 11 12 13
        on right: 7 18 23
    id_list (50)
        on left: 14 15
        on right: 7 15
    func_def (51)
        on left: 18
        on right: 4
    $@1 (52)
        on left: 16
        on right: 18
    $@2 (53)
        on left: 17
        on right: 18
    param_list_opt <ast> (54)
        on left: 19 20
        on right: 18
    param_list <ast> (55)
        on left: 21 22
        on right: 19 22
    param <ast> (56)
        on left: 23
        on right: 21 22
    block <block> (57)
        on left: 24
        on right: 18 37
    decl_list_opt (58)
        on left: 25 26
        on right: 24 25
    stmt_list <block> (59)
        on left: 27 28
        on right: 24 27
    stmt <stmt> (60)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 27 38 39 40 41
    if_stmt <stmt> (61)
        on left: 38 39
        on right: 34
    while_stmt <stmt> (62)
        on left: 40
        on right: 35
    do_while_stmt <stmt> (63)
        on left: 41
        on right: 36
    assign_stmt <stmt> (64)
        on left: 42
        on right: 29
    read_stmt <stmt> (65)
        on left: 43
        on right: 30
    write_stmt <stmt> (66)
        on left: 44
        on right: 31
    return_stmt <stmt> (67)
        on left: 45 46
        on right: 32
    func_call_stmt <stmt> (68)
        on left: 47
        on right: 33
    arg_list <expr> (69)
        on left: 48 49
        on right: 49 50
    args <expr> (70)
        on left: 50 51
        on right: 47 68
    expr <expr> (71)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
        on right: 38 39 40 41 42 44 45 48 49 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67


State 0

    0 $accept: • program $end

    $default  reduce using rule 6 (globals_var_decls)

    program            go to state 1
    globals_var_decls  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: globals_var_decls • func_list
    5 globals_var_decls: globals_var_decls • var_decl

    INTEGER  shift, and go to state 4
    STRING   shift, and go to state 5
    VOID     shift, and go to state 6
    BOOL     shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9

    func_list      go to state 10
    func_def_item  go to state 11
    var_decl       go to state 12
    type           go to state 13
    func_def       go to state 14


State 3

    0 $accept: program $end •

    $default  accept


State 4

    8 type: INTEGER •

    $default  reduce using rule 8 (type)


State 5

    9 type: STRING •

    $default  reduce using rule 9 (type)


State 6

   13 type: VOID •

    $default  reduce using rule 13 (type)


State 7

   10 type: BOOL •

    $default  reduce using rule 10 (type)


State 8

   11 type: FLOAT •

    $default  reduce using rule 11 (type)


State 9

   12 type: CHAR •

    $default  reduce using rule 12 (type)


State 10

    1 program: globals_var_decls func_list •
    2 func_list: func_list • func_def_item

    INTEGER  shift, and go to state 4
    STRING   shift, and go to state 5
    VOID     shift, and go to state 6
    BOOL     shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9

    $default  reduce using rule 1 (program)

    func_def_item  go to state 15
    type           go to state 16
    func_def       go to state 14


State 11

    3 func_list: func_def_item •

    $default  reduce using rule 3 (func_list)


State 12

    5 globals_var_decls: globals_var_decls var_decl •

    $default  reduce using rule 5 (globals_var_decls)


State 13

    7 var_decl: type • id_list SEMICOLON
   18 func_def: type • NAME LEFT_ROUND_BRACKET $@1 param_list_opt RIGHT_ROUND_BRACKET $@2 block

    NAME  shift, and go to state 17

    id_list  go to state 18


State 14

    4 func_def_item: func_def •

    $default  reduce using rule 4 (func_def_item)


State 15

    2 func_list: func_list func_def_item •

    $default  reduce using rule 2 (func_list)


State 16

   18 func_def: type • NAME LEFT_ROUND_BRACKET $@1 param_list_opt RIGHT_ROUND_BRACKET $@2 block

    NAME  shift, and go to state 19


State 17

   14 id_list: NAME •
   18 func_def: type NAME • LEFT_ROUND_BRACKET $@1 param_list_opt RIGHT_ROUND_BRACKET $@2 block

    LEFT_ROUND_BRACKET  shift, and go to state 20

    $default  reduce using rule 14 (id_list)


State 18

    7 var_decl: type id_list • SEMICOLON
   15 id_list: id_list • COMMA NAME

    COMMA      shift, and go to state 21
    SEMICOLON  shift, and go to state 22


State 19

   18 func_def: type NAME • LEFT_ROUND_BRACKET $@1 param_list_opt RIGHT_ROUND_BRACKET $@2 block

    LEFT_ROUND_BRACKET  shift, and go to state 20


State 20

   18 func_def: type NAME LEFT_ROUND_BRACKET • $@1 param_list_opt RIGHT_ROUND_BRACKET $@2 block

    $default  reduce using rule 16 ($@1)

    $@1  go to state 23


State 21

   15 id_list: id_list COMMA • NAME

    NAME  shift, and go to state 24


State 22

    7 var_decl: type id_list SEMICOLON •

    $default  reduce using rule 7 (var_decl)


State 23

   18 func_def: type NAME LEFT_ROUND_BRACKET $@1 • param_list_opt RIGHT_ROUND_BRACKET $@2 block

    INTEGER  shift, and go to state 4
    STRING   shift, and go to state 5
    VOID     shift, and go to state 6
    BOOL     shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9

    $default  reduce using rule 20 (param_list_opt)

    type            go to state 25
    param_list_opt  go to state 26
    param_list      go to state 27
    param           go to state 28


State 24

   15 id_list: id_list COMMA NAME •

    $default  reduce using rule 15 (id_list)


State 25

   23 param: type • NAME

    NAME  shift, and go to state 29


State 26

   18 func_def: type NAME LEFT_ROUND_BRACKET $@1 param_list_opt • RIGHT_ROUND_BRACKET $@2 block

    RIGHT_ROUND_BRACKET  shift, and go to state 30


State 27

   19 param_list_opt: param_list •
   22 param_list: param_list • COMMA param

    COMMA  shift, and go to state 31

    $default  reduce using rule 19 (param_list_opt)


State 28

   21 param_list: param •

    $default  reduce using rule 21 (param_list)


State 29

   23 param: type NAME •

    $default  reduce using rule 23 (param)


State 30

   18 func_def: type NAME LEFT_ROUND_BRACKET $@1 param_list_opt RIGHT_ROUND_BRACKET • $@2 block

    $default  reduce using rule 17 ($@2)

    $@2  go to state 32


State 31

   22 param_list: param_list COMMA • param

    INTEGER  shift, and go to state 4
    STRING   shift, and go to state 5
    VOID     shift, and go to state 6
    BOOL     shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9

    type   go to state 25
    param  go to state 33


State 32

   18 func_def: type NAME LEFT_ROUND_BRACKET $@1 param_list_opt RIGHT_ROUND_BRACKET $@2 • block

    LEFT_CURLY_BRACKET  shift, and go to state 34

    block  go to state 35


State 33

   22 param_list: param_list COMMA param •

    $default  reduce using rule 22 (param_list)


State 34

   24 block: LEFT_CURLY_BRACKET • decl_list_opt stmt_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 26 (decl_list_opt)

    decl_list_opt  go to state 36


State 35

   18 func_def: type NAME LEFT_ROUND_BRACKET $@1 param_list_opt RIGHT_ROUND_BRACKET $@2 block •

    $default  reduce using rule 18 (func_def)


State 36

   24 block: LEFT_CURLY_BRACKET decl_list_opt • stmt_list RIGHT_CURLY_BRACKET
   25 decl_list_opt: decl_list_opt • var_decl

    INTEGER  shift, and go to state 4
    STRING   shift, and go to state 5
    VOID     shift, and go to state 6
    BOOL     shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9

    $default  reduce using rule 28 (stmt_list)

    var_decl   go to state 37
    type       go to state 38
    stmt_list  go to state 39


State 37

   25 decl_list_opt: decl_list_opt var_decl •

    $default  reduce using rule 25 (decl_list_opt)


State 38

    7 var_decl: type • id_list SEMICOLON

    NAME  shift, and go to state 40

    id_list  go to state 18


State 39

   24 block: LEFT_CURLY_BRACKET decl_list_opt stmt_list • RIGHT_CURLY_BRACKET
   27 stmt_list: stmt_list • stmt

    READ                 shift, and go to state 41
    WRITE                shift, and go to state 42
    IF                   shift, and go to state 43
    WHILE                shift, and go to state 44
    DO                   shift, and go to state 45
    RETURN               shift, and go to state 46
    NAME                 shift, and go to state 47
    LEFT_CURLY_BRACKET   shift, and go to state 34
    RIGHT_CURLY_BRACKET  shift, and go to state 48

    block           go to state 49
    stmt            go to state 50
    if_stmt         go to state 51
    while_stmt      go to state 52
    do_while_stmt   go to state 53
    assign_stmt     go to state 54
    read_stmt       go to state 55
    write_stmt      go to state 56
    return_stmt     go to state 57
    func_call_stmt  go to state 58


State 40

   14 id_list: NAME •

    $default  reduce using rule 14 (id_list)


State 41

   43 read_stmt: READ • NAME

    NAME  shift, and go to state 59


State 42

   44 write_stmt: WRITE • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 67


State 43

   38 if_stmt: IF • LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET stmt
   39        | IF • LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET stmt ELSE stmt

    LEFT_ROUND_BRACKET  shift, and go to state 68


State 44

   40 while_stmt: WHILE • LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET stmt

    LEFT_ROUND_BRACKET  shift, and go to state 69


State 45

   41 do_while_stmt: DO • stmt WHILE LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET SEMICOLON

    READ                shift, and go to state 41
    WRITE               shift, and go to state 42
    IF                  shift, and go to state 43
    WHILE               shift, and go to state 44
    DO                  shift, and go to state 45
    RETURN              shift, and go to state 46
    NAME                shift, and go to state 47
    LEFT_CURLY_BRACKET  shift, and go to state 34

    block           go to state 49
    stmt            go to state 70
    if_stmt         go to state 51
    while_stmt      go to state 52
    do_while_stmt   go to state 53
    assign_stmt     go to state 54
    read_stmt       go to state 55
    write_stmt      go to state 56
    return_stmt     go to state 57
    func_call_stmt  go to state 58


State 46

   45 return_stmt: RETURN • expr
   46            | RETURN •

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    $default  reduce using rule 46 (return_stmt)

    expr  go to state 71


State 47

   42 assign_stmt: NAME • ASSIGN_OP expr
   47 func_call_stmt: NAME • LEFT_ROUND_BRACKET args RIGHT_ROUND_BRACKET

    ASSIGN_OP           shift, and go to state 72
    LEFT_ROUND_BRACKET  shift, and go to state 73


State 48

   24 block: LEFT_CURLY_BRACKET decl_list_opt stmt_list RIGHT_CURLY_BRACKET •

    $default  reduce using rule 24 (block)


State 49

   37 stmt: block •

    $default  reduce using rule 37 (stmt)


State 50

   27 stmt_list: stmt_list stmt •

    $default  reduce using rule 27 (stmt_list)


State 51

   34 stmt: if_stmt •

    $default  reduce using rule 34 (stmt)


State 52

   35 stmt: while_stmt •

    $default  reduce using rule 35 (stmt)


State 53

   36 stmt: do_while_stmt •

    $default  reduce using rule 36 (stmt)


State 54

   29 stmt: assign_stmt • SEMICOLON

    SEMICOLON  shift, and go to state 74


State 55

   30 stmt: read_stmt • SEMICOLON

    SEMICOLON  shift, and go to state 75


State 56

   31 stmt: write_stmt • SEMICOLON

    SEMICOLON  shift, and go to state 76


State 57

   32 stmt: return_stmt • SEMICOLON

    SEMICOLON  shift, and go to state 77


State 58

   33 stmt: func_call_stmt • SEMICOLON

    SEMICOLON  shift, and go to state 78


State 59

   43 read_stmt: READ NAME •

    $default  reduce using rule 43 (read_stmt)


State 60

   68 expr: NAME • LEFT_ROUND_BRACKET args RIGHT_ROUND_BRACKET
   69     | NAME •

    LEFT_ROUND_BRACKET  shift, and go to state 79

    $default  reduce using rule 69 (expr)


State 61

   70 expr: INT_NUM •

    $default  reduce using rule 70 (expr)


State 62

   71 expr: FLOAT_NUM •

    $default  reduce using rule 71 (expr)


State 63

   72 expr: STR_CONST •

    $default  reduce using rule 72 (expr)


State 64

   67 expr: LEFT_ROUND_BRACKET • expr RIGHT_ROUND_BRACKET

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 80


State 65

   65 expr: MINUS • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 81


State 66

   64 expr: NOT • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 82


State 67

   44 write_stmt: WRITE expr •
   52 expr: expr • PLUS expr
   53     | expr • MINUS expr
   54     | expr • MULT expr
   55     | expr • DIV expr
   56     | expr • GREATER_THAN expr
   57     | expr • LESS_THAN expr
   58     | expr • GREATER_THAN_EQUAL expr
   59     | expr • LESS_THAN_EQUAL expr
   60     | expr • EQUAL expr
   61     | expr • NOT_EQUAL expr
   62     | expr • AND expr
   63     | expr • OR expr
   66     | expr • QUESTION_MARK expr COLON expr

    PLUS                shift, and go to state 83
    MINUS               shift, and go to state 84
    MULT                shift, and go to state 85
    DIV                 shift, and go to state 86
    GREATER_THAN        shift, and go to state 87
    LESS_THAN           shift, and go to state 88
    GREATER_THAN_EQUAL  shift, and go to state 89
    LESS_THAN_EQUAL     shift, and go to state 90
    EQUAL               shift, and go to state 91
    NOT_EQUAL           shift, and go to state 92
    AND                 shift, and go to state 93
    OR                  shift, and go to state 94
    QUESTION_MARK       shift, and go to state 95

    $default  reduce using rule 44 (write_stmt)


State 68

   38 if_stmt: IF LEFT_ROUND_BRACKET • expr RIGHT_ROUND_BRACKET stmt
   39        | IF LEFT_ROUND_BRACKET • expr RIGHT_ROUND_BRACKET stmt ELSE stmt

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 96


State 69

   40 while_stmt: WHILE LEFT_ROUND_BRACKET • expr RIGHT_ROUND_BRACKET stmt

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 97


State 70

   41 do_while_stmt: DO stmt • WHILE LEFT_ROUND_BRACKET expr RIGHT_ROUND_BRACKET SEMICOLON

    WHILE  shift, and go to state 98


State 71

   45 return_stmt: RETURN expr •
   52 expr: expr • PLUS expr
   53     | expr • MINUS expr
   54     | expr • MULT expr
   55     | expr • DIV expr
   56     | expr • GREATER_THAN expr
   57     | expr • LESS_THAN expr
   58     | expr • GREATER_THAN_EQUAL expr
   59     | expr • LESS_THAN_EQUAL expr
   60     | expr • EQUAL expr
   61     | expr • NOT_EQUAL expr
   62     | expr • AND expr
   63     | expr • OR expr
   66     | expr • QUESTION_MARK expr COLON expr

    PLUS                shift, and go to state 83
    MINUS               shift, and go to state 84
    MULT                shift, and go to state 85
    DIV                 shift, and go to state 86
    GREATER_THAN        shift, and go to state 87
    LESS_THAN           shift, and go to state 88
    GREATER_THAN_EQUAL  shift, and go to state 89
    LESS_THAN_EQUAL     shift, and go to state 90
    EQUAL               shift, and go to state 91
    NOT_EQUAL           shift, and go to state 92
    AND                 shift, and go to state 93
    OR                  shift, and go to state 94
    QUESTION_MARK       shift, and go to state 95

    $default  reduce using rule 45 (return_stmt)


State 72

   42 assign_stmt: NAME ASSIGN_OP • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 99


State 73

   47 func_call_stmt: NAME LEFT_ROUND_BRACKET • args RIGHT_ROUND_BRACKET

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    $default  reduce using rule 51 (args)

    arg_list  go to state 100
    args      go to state 101
    expr      go to state 102


State 74

   29 stmt: assign_stmt SEMICOLON •

    $default  reduce using rule 29 (stmt)


State 75

   30 stmt: read_stmt SEMICOLON •

    $default  reduce using rule 30 (stmt)


State 76

   31 stmt: write_stmt SEMICOLON •

    $default  reduce using rule 31 (stmt)


State 77

   32 stmt: return_stmt SEMICOLON •

    $default  reduce using rule 32 (stmt)


State 78

   33 stmt: func_call_stmt SEMICOLON •

    $default  reduce using rule 33 (stmt)


State 79

   68 expr: NAME LEFT_ROUND_BRACKET • args RIGHT_ROUND_BRACKET

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    $default  reduce using rule 51 (args)

    arg_list  go to state 100
    args      go to state 103
    expr      go to state 102


State 80

   52 expr: expr • PLUS expr
   53     | expr • MINUS expr
   54     | expr • MULT expr
   55     | expr • DIV expr
   56     | expr • GREATER_THAN expr
   57     | expr • LESS_THAN expr
   58     | expr • GREATER_THAN_EQUAL expr
   59     | expr • LESS_THAN_EQUAL expr
   60     | expr • EQUAL expr
   61     | expr • NOT_EQUAL expr
   62     | expr • AND expr
   63     | expr • OR expr
   66     | expr • QUESTION_MARK expr COLON expr
   67     | LEFT_ROUND_BRACKET expr • RIGHT_ROUND_BRACKET

    RIGHT_ROUND_BRACKET  shift, and go to state 104
    PLUS                 shift, and go to state 83
    MINUS                shift, and go to state 84
    MULT                 shift, and go to state 85
    DIV                  shift, and go to state 86
    GREATER_THAN         shift, and go to state 87
    LESS_THAN            shift, and go to state 88
    GREATER_THAN_EQUAL   shift, and go to state 89
    LESS_THAN_EQUAL      shift, and go to state 90
    EQUAL                shift, and go to state 91
    NOT_EQUAL            shift, and go to state 92
    AND                  shift, and go to state 93
    OR                   shift, and go to state 94
    QUESTION_MARK        shift, and go to state 95


State 81

   52 expr: expr • PLUS expr
   53     | expr • MINUS expr
   54     | expr • MULT expr
   55     | expr • DIV expr
   56     | expr • GREATER_THAN expr
   57     | expr • LESS_THAN expr
   58     | expr • GREATER_THAN_EQUAL expr
   59     | expr • LESS_THAN_EQUAL expr
   60     | expr • EQUAL expr
   61     | expr • NOT_EQUAL expr
   62     | expr • AND expr
   63     | expr • OR expr
   65     | MINUS expr •
   66     | expr • QUESTION_MARK expr COLON expr

    $default  reduce using rule 65 (expr)


State 82

   52 expr: expr • PLUS expr
   53     | expr • MINUS expr
   54     | expr • MULT expr
   55     | expr • DIV expr
   56     | expr • GREATER_THAN expr
   57     | expr • LESS_THAN expr
   58     | expr • GREATER_THAN_EQUAL expr
   59     | expr • LESS_THAN_EQUAL expr
   60     | expr • EQUAL expr
   61     | expr • NOT_EQUAL expr
   62     | expr • AND expr
   63     | expr • OR expr
   64     | NOT expr •
   66     | expr • QUESTION_MARK expr COLON expr

    PLUS                shift, and go to state 83
    MINUS               shift, and go to state 84
    MULT                shift, and go to state 85
    DIV                 shift, and go to state 86
    GREATER_THAN        shift, and go to state 87
    LESS_THAN           shift, and go to state 88
    GREATER_THAN_EQUAL  shift, and go to state 89
    LESS_THAN_EQUAL     shift, and go to state 90
    EQUAL               shift, and go to state 91
    NOT_EQUAL           shift, and go to state 92

    $default  reduce using rule 64 (expr)


State 83

   52 expr: expr PLUS • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 105


State 84

   53 expr: expr MINUS • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 106


State 85

   54 expr: expr MULT • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 107


State 86

   55 expr: expr DIV • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 108


State 87

   56 expr: expr GREATER_THAN • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 109


State 88

   57 expr: expr LESS_THAN • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 110


State 89

   58 expr: expr GREATER_THAN_EQUAL • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 111


State 90

   59 expr: expr LESS_THAN_EQUAL • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 112


State 91

   60 expr: expr EQUAL • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 113


State 92

   61 expr: expr NOT_EQUAL • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 114


State 93

   62 expr: expr AND • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 115


State 94

   63 expr: expr OR • expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 116


State 95

   66 expr: expr QUESTION_MARK • expr COLON expr

    NAME                shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    STR_CONST           shift, and go to state 63
    LEFT_ROUND_BRACKET  shift, and go to state 64
    MINUS               shift, and go to state 65
    NOT                 shift, and go to state 66

    expr  go to state 117


State 96

   38 if_stmt: IF LEFT_ROUND_BRACKET expr • RIGHT_ROUND_BRACKET stmt
   39        | IF LEFT_ROUND_BRACKET expr • RIGHT_ROUND_BRACKET stmt ELSE stmt
   52 expr: expr • PLUS expr
   53     | expr • MINUS expr
   54     | expr • MULT expr
   55     | expr • DIV expr
   56     | expr • GREATER_THAN expr
   57     | expr • LESS_THAN expr
   58     | expr • GREATER_THAN_EQUAL expr
   59     | expr • LESS_THAN_EQUAL expr
   60     | expr • EQUAL expr
   61     | expr • NOT_EQUAL expr
   62     | expr • AND expr
   63     | expr • OR expr
   66     | expr • QUESTION_MARK expr COLON expr
